--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ body {
 <body>
 
 <h1>Datenschutzverordnungen für Forschungsexperiment</h1>
+  
+<p>Ziel unserer Studie ist es etwas zu lernen und vielleicht auch ein klein wenig dazu beizutragen um das Verständnis über Chatbots, künstliche Intelligenz und im speziellen über den Einsatz von Emoticons zu unterstützen. Wenn Sie bei der Studie erfolgreich mitgemacht haben, steht ein Alias in unserem System. Also z.B. so etwas wie "Grüner Kobold", der dann mit den jeweiligen Antworten verknüpft ist.</p>   
 <p>Mit der Teilnahme am Experiment erklären Sie sich mit folgenden Verordnungen einverstanden:</p>
 <p>Folgende Informationen sind Ihnen gemäß Art. 13, 14 der DatenschutzGrundverordnung (DSGVO, Verordnung (EU) 2016/679) bei Erhebung von personenbezogenen Daten mitzuteilen: 
 Ihre Umfragedaten sind für uns anonym. Rechte auf Auskunft etc. scheiden mit dem Zeitpunkt der Anonymisierung wegen Nicht-Rückverfolgbarkeit aus.</p>
