--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ body {
 
 <h1>Datenschutzverordnungen für Forschungsexperiment</h1>
   
-<p>Ziel unserer Studie ist es etwas zu lernen und vielleicht auch ein klein wenig dazu beizutragen um das Verständnis über Chatbots, künstliche Intelligenz und im speziellen über den Einsatz von Emoticons zu unterstützen. Wenn Sie bei der Studie erfolgreich mitgemacht haben, steht ein Alias in unserem System. Also z.B. so etwas wie "Grüner Kobold", der dann mit den jeweiligen Antworten verknüpft ist.</p>   
+<p>Das primäre Ziel unserer Studie ist es etwas zu lernen und die Forschung voranzubringen.</p>   
 <p>Mit der Teilnahme am Experiment erklären Sie sich mit folgenden Verordnungen einverstanden:</p>
-<p>Folgende Informationen sind Ihnen gemäß Art. 13, 14 der DatenschutzGrundverordnung (DSGVO, Verordnung (EU) 2016/679) bei Erhebung von personenbezogenen Daten mitzuteilen: 
+<p>Folgende Informationen sind Ihnen gemäß Art. 13, 14 der Datenschutz-Grundverordnung (DSGVO, Verordnung (EU) 2016/679) bei Erhebung von personenbezogenen Daten mitzuteilen: 
 Ihre Umfragedaten sind für uns anonym. Rechte auf Auskunft etc. scheiden mit dem Zeitpunkt der Anonymisierung wegen Nicht-Rückverfolgbarkeit aus.</p>
 <p>• Zu Art. 14, Abs. 1a) und b), 13 Abs. 1 a) und b): Verantwortlicher für die Erhebung und Verarbeitung der Daten ist die Georg-August-Universität Göttingen, 
 Stiftung öffentlichen Rechts (ohne Universitätsmedizin), Wilhelmsplatz 1, 37073 Göttingen [im Folgenden: Universität Göttingen]; 
@@ -26,7 +26,7 @@ Platz der Göttinger Sieben 6 37073 Göttingen E-Mail: datenschutz@uni-goettinge
 <p>• Zu Art. 14 Abs. 1 c), Art. 13 Abs. 1 c): Die Erhebung der Daten aus der Umfrage ist notwendig, um das o.g. Forschungsprojekt durchzuführen. 
 Die Rechtsgrundlage hierfür ist Art, 6 Abs. 1 UAbs. 1 lit. e) (öffentliche Aufgabe der Hochschulen gem. § 3 Abs. 1 S. 1 Nr. 1 NHG).</p>  
 <p>• Zu Art. 14 Abs. 1 e), 13 Abs. 1 e): Die Daten werden folgendermaßen weiterverarbeitet und an weitere zuständige Stellen übermittelt: 
-Forschung: Die im Rahmen der Studien angegebenen Daten werden von Christof Ryter und Lucas von Heydebreck verarbeitet. 
+Forschung: Die im Rahmen der Studien angegebenen Daten werden von Lucas von Heydebreck und Christof A. Ryter. 
 Wenn weitere Datenempfänger existieren, werden Sie gesondert darauf hingewiesen.</p>  
 <p>• Zu Art. 14 Abs. 2 a), 13 Abs. 1 a): Die Daten werden anonymisiert (Löschsurrogat).</p>
 <p>• Zu Art. 14 Abs. 2 c) und d), 13 Abs. 2 b) und c) –Nur für den Fall der durch freiwillige De-Anonymisierung hergestellten Zuordenbarkeit der angegebenen Daten anwendbar 
